--- a/Source/Neutralized-Green.theme.css
+++ b/Source/Neutralized-Green.theme.css
@@ -244,6 +244,9 @@ transition:all 600ms ease;
 .mask-2vyqAW {
 	-webkit-mask: none;
 }
+.title-qAcLxz .status, .titleCall-3X0yGQ .status{
+    width: 30px !important;
+}
 /****************************************************************
 ****************************************************************
 ****************************************************************/
@@ -541,6 +544,7 @@ transition:all 600ms ease;
 /*Server's List*/
 .guilds-wrapper .guilds .guild.unread:before {/*Guild selected/unread dot*/
 	background-color: rgba(0,220,0,1) !important;
+    margin-top: -11px !important;
 	animation: pulse6 2s linear infinite;
 }
 @keyframes pulse6{ /* If you have Lag Problems with the theme then delete the "@" in the beggining of this line*/
@@ -583,6 +587,8 @@ transition:all 600ms ease;
 }
 .theme-dark .unread-23Kvxk { /*Unread Message dot Color*/
 	background-color: rgba(0,220,0,1) !important;
+    margin-top: -11px !important;
+	height: 70% !important;
 	animation: pulse7 2s linear infinite;
 }
 @keyframes pulse7{ /* If you have Lag Problems with the theme then delete the "@" in the beggining of this line*/
